Fix z-index

--- a/src/components/PinnedSideBar/pinnedSideBarStyles.scss
+++ b/src/components/PinnedSideBar/pinnedSideBarStyles.scss
@@ -13,6 +13,7 @@
     padding: 0 20px;
     max-width: v.$screen-full;
     margin: 0 auto;
+    z-index: 4;
   }
 
   @include m.lgMinBreakPoint {
